--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -223,14 +223,13 @@ ul, menu, dir {
 
 @media only screen and (max-width: 1000px) {
       ul.slides li {
-        width: 33%; }
-      body {
-        font-size: 10px;
-      }}
+        width: 33%; }}
     @media only screen and (max-width: 767px) {
       ul.slides li {
         width: 50%; }
-    }
+      body {
+        font-size: 9px;
+      }}
     ul.slides li a {
       display: block;
       width: 100%;
